--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -31,3 +31,16 @@
     height: 60px;
     border-radius: 5px;
 }
+
+@media (max-width: 800px) {
+    .container{
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container_social{
+        width: 300px;
+    }
+}
