--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100%;
   height: 100px;
-   top: 0;
+  top: 0;
   left: 0;
   display: flex;
   justify-content: space-evenly;
@@ -12,8 +12,36 @@
   z-index: 10;
 }
 
+.svg{
+  cursor: pointer;
+      width: 40px;
+  height: 40px;
+}
+
+
 .logo {
   cursor: pointer;
+}
+
+.sidebarClosed{
+  position: absolute;
+  top:100px;
+  left:0;
+  height: 100vh;
+  width: 220px;
+  background-color: aqua;
+  transition: 0.5s ease translate;
+  transform: translateX(-220px);
+}
+.sidebarOpened{
+  position: absolute;
+  top:100px;
+  left:0;
+  height: 100vh;
+  width: 220px;
+  background-color: aqua;
+  transition: 0.5s ease translate;
+  transform: translateX(0px);
 }
 
 .nav__links {
@@ -44,6 +72,9 @@
   color: #daa520;
 }
 
+@media (max-width: 800px) {
+
+}
 
 
 /*#8AC6D0
